# TradingAgents

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
Proposal/: OutputChinese.md  SAAS.md  SaveToken.md
webui/: Dockerfile.backend  Dockerfile.frontend  README.md  requirements.txt
webui/backend/: jobs.py  main.py  models.py  providers.py
webui/frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
webui/frontend/src/: app.css  app.html
webui/frontend/src/lib/: api.ts  types.ts
webui/frontend/src/lib/components/: AgentStatus.svelte  MessageLog.svelte  ReportViewer.svelte  StatsBar.svelte
webui/frontend/src/routes/: +layout.svelte  +page.svelte
webui/frontend/src/routes/analyze/[jobId]/: +page.svelte  +page.ts
